[package]
name = "dickens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", version = "0.1.0" }
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
graph-cycles = "0.1.0"
libaosc = { git = "https://github.com/AOSC-Dev/libaosc-rs", version = "0.1.0" }
log = "0.4.20"
petgraph = "0.6.4"
reqwest = { version = "0.11.24", features = ["gzip"] }
sha2 = "0.10.8"
size = "0.4.1"
solver = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", version = "0.1.0" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.4.0"
