[package]
name = "dickens-topic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
dickens = { version = "0.1.0", path = "../dickens" }
env_logger = "0.11.3"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
