[package]
name = "dickens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
libaosc = { git = "https://github.com/AOSC-Dev/libaosc-rs", version = "0.1.0" }
log = "0.4.21"
reqwest = { version = "0.12.2", features = ["json"] }
sha2 = "0.10.8"
size = "0.4.1"
solver = { git = "https://github.com/AOSC-Dev/abbs-meta-rs.git", version = "0.1.0" }
tokio = { version = "1.37.0", features = ["rt"] }

